Made home page to request lists and render.

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 <head>
   <title>Home</title>
   <link rel="stylesheet" href="/styles/home.css">
+  <script src="/js/home.js"></script>
 </head>
 
 <body>
@@ -36,15 +37,8 @@
 
     <section class="view-list">
       <h3>All TODO's</h3>
+      <div class="all-lists">
 
-      <div class="list">
-        <div class="listcard">
-          <div class="list-title" id="1">Personal</div>
-        </div>
-
-        <div class="listcard">
-          <div class="list-title" id="2">Home</div>
-        </div>
       </div>
     </section>
   </main>
