--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -23,9 +23,14 @@ body {
   padding: 0 20px;
 }
 
-.listcard {
-  border: 1px solid gray;
-  width: 100%;
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.list li {
+  padding: 1em 1em 0;
   height: 3em;
-  margin: 10px 0;
+  border: 1px solid gray;
+  margin: 0.5em 0;
 }
