--- a/templates/home.html
+++ b/templates/home.html
@@ -25,14 +25,14 @@
     <section class="create-list">
       <h3>Create New TODO-list:</h3>
 
-      <form action="todo/add-list" method="post">
+      <form action="/todo/add-list" method="post">
         <div class="field">
           <label for="title">Title:</label>
-          <input type="text" name="title" id="todo-title">
+          <input type="text" name="title" id="todo-title" required>
         </div>
-
-        <input type="button" value="Create List">
       </form>
+
+      <input type="button" value="Create List" id="create-list">
     </section>
 
     <section class="view-list">
