--- a/templates/list.html
+++ b/templates/list.html
@@ -2,12 +2,13 @@
 
 <head>
   <title>List</title>
-  <link rel="stylesheet" href="styles/list.css">
+  <link rel="stylesheet" href="/styles/list.css">
 </head>
 
 <body>
   <header>
-    <a href="home">Home</a>
+    <a href="/todo/home">Home</a>
+    <h2>TODO's:</h2>
     <div>
       <span>__USERNAME__</span>
       <div class="logout">
@@ -18,16 +19,12 @@
 
   <main>
     <section class="list-view">
-      <h1>__TITLE__</h1>
+      <h3>__TITLE__</h3>
 
-      <h3>TODO's:</h3>
       <div class="items">
-        __ITEMS__
-        <ul>
-          <li>hi</li>
-          <li>hi</li>
-          <li>hi</li>
-        </ul>
+        <div>
+          __ITEMS__
+        </div>
       </div>
     </section>
   </main>
