Implemented add-item feature.

--- a/templates/home.html
+++ b/templates/home.html
@@ -30,9 +30,15 @@
           <label for="title">Title:</label>
           <input type="text" name="title" id="todo-title" required>
         </div>
+        <div class="items">
+          <label for="items">Items:</label>
+        </div>
       </form>
 
-      <input type="button" value="Create List" id="create-list">
+      <div class="create-buttons">
+        <input type="button" value="Create Item" id="create-item">
+        <input type="button" value="Create List" id="create-list">
+      </div>
     </section>
 
     <section class="view-list">
