--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -38,3 +38,9 @@ ul {
   justify-content: space-between;
   align-items: center;
 }
+
+.items {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+}
