Added login link in signup and signup link in loginpage.

--- a/templates/invalidLogin.html
+++ b/templates/invalidLogin.html
@@ -10,6 +10,8 @@
     <section class="login">
       <h1>Login</h1>
 
+      <div id="message">Invalid username/password</div>
+
       <form action="/login" method="post">
         <div class="input-section">
           <label for="username">Username:</label>
@@ -24,7 +26,10 @@
         <input type="submit" value="Login" id="submit-btn">
       </form>
     </section>
-    <div id="message">Invalid username/password</div>
+    <div class="signup">
+      <label for="signup">Don't have an Account?</label>
+      <a href="/sign-up">Sign-Up</a>
+    </div>
   </main>
 </body>
 
