--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,10 @@
         <input type="submit" value="Login" id="submit-btn">
       </form>
     </section>
+    <div class="signup">
+      <label for="signup">Don't have an Account?</label>
+      <a href="/sign-up">Sign-up</a>
+    </div>
     <div id="message"></div>
   </main>
 </body>
