--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -24,6 +24,10 @@
         <input type="submit" value="Sign Up">
       </form>
     </section>
+    <div class="login">
+      <label for="login">Already have an Account?</label>
+      <a href="/login">Login</a>
+    </div>
   </main>
 </body>
 
