--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -7,23 +7,33 @@
 }
 
 .login {
+  padding: 1em 0 0;
+  width: 400px;
+  height: 300px;
   display: flex;
   flex-direction: column;
-}
-
-.login h1 {
-  font-size: 2em;
-  font-weight: 100;
-  text-align: center;
-  text-decoration: underline;
+  align-items: center;
 }
 
 .input-section {
+  width: 50%;
   display: flex;
   flex-direction: column;
-  margin: 1em 0;
+  height: 2em;
+  margin: 1em 1em;
 }
 
 #message {
   color: red;
+}
+
+#submit-btn {
+  width: 150px;
+  height: 2em;
+  margin: 2em;
+}
+
+legend {
+  font-size: 2.5em;
+  text-align: center;
 }
