--- a/templates/invalidLogin.html
+++ b/templates/invalidLogin.html
@@ -7,12 +7,10 @@
 
 <body>
   <main class="page">
-    <section class="login">
-      <h1>Login</h1>
+    <form action="/login" method="post">
+      <fieldset class="login">
+        <legend class="title">Login</legend>
 
-      <div id="message">Invalid username/password</div>
-
-      <form action="/login" method="post">
         <div class="input-section">
           <label for="username">Username:</label>
           <input type="text" name="username">
@@ -20,16 +18,20 @@
 
         <div class="input-section">
           <label for="password">Password:</label>
-          <input type="password" name="password" id="password">
+          <input type="password" name="password">
         </div>
 
         <input type="submit" value="Login" id="submit-btn">
-      </form>
-    </section>
+
+        <div id="message">Invalid Username/password</div>
+      </fieldset>
+    </form>
+
     <div class="signup">
       <label for="signup">Don't have an Account?</label>
-      <a href="/sign-up">Sign-Up</a>
+      <a href="/sign-up">Sign-up</a>
     </div>
+
   </main>
 </body>
 
