--- a/templates/signUpWithError.html
+++ b/templates/signUpWithError.html
@@ -7,25 +7,25 @@
 
 <body>
   <main class="page">
-    <section class="signup">
-      <h1>Sign Up</h1>
+    <form action="/sign-up" method="post">
+      <fieldset class="signup">
+        <legend>Sign up</legend>
 
-      <div class="error-message">Invalid Credentials</div>
-
-      <form action="/sign-up" method="post">
-        <div>
+        <div class="input-section">
           <label for="username">Username:</label>
           <input type="text" name="username">
         </div>
 
-        <div>
+        <div class="input-section">
           <label for="password">Password:</label>
           <input type="password" name="password" id="password">
         </div>
 
-        <input type="submit" value="Sign Up">
-      </form>
-    </section>
+        <input type="submit" value="Sign Up" id="submit-btn">
+
+        <div class="error-message">Invalid Credentials</div>
+      </fieldset>
+    </form>
 
     <div class="login">
       <label for="login">Already have an Account?</label>
