--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,6 +1,11 @@
 body {
   width: 1200px;
   margin: 0 auto;
+  font-family: sans-serif;
+}
+
+a {
+  text-decoration: none;
 }
 
 .page-header {
@@ -11,7 +16,7 @@ body {
   box-sizing: border-box;
 }
 
-.create-list {
+.box {
   border: 1px solid black;
   margin: 20px 0;
   padding: 20px;
@@ -26,6 +31,9 @@ body {
 ul {
   list-style-type: none;
   padding: 0;
+}
+
+.scroll {
   overflow: scroll;
 }
 
@@ -40,7 +48,7 @@ ul {
 }
 
 .items {
-  margin: 10px 5px;
+  margin: 1em 2.5em;
   display: flex;
   flex-direction: column;
   width: 200px;
@@ -54,4 +62,33 @@ ul {
   width: 230px;
   display: flex;
   justify-content: space-between;
+}
+
+.thin {
+  font-weight: 200;
+}
+
+.thick {
+  font-weight: 400;
+}
+
+#todo-title {
+  width: 250px;
+  height: 2em;
+}
+
+.add-item {
+  margin: 1em 3em;
+  display: flex;
+  align-items: center;
+}
+
+#create-item {
+  border-radius: 50%;
+  margin: 0 0.5em;
+}
+
+#create-list {
+  margin: 0 2em;
+  font-size: 1.2em;
 }
