--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,3 +1,7 @@
+body {
+  font-family: sans-serif;
+}
+
 .page {
   width: 720px;
   margin: 200px auto;
@@ -31,6 +35,10 @@
   width: 150px;
   height: 2em;
   margin: 2em;
+}
+
+.title {
+  font-weight: 100;
 }
 
 legend {
