--- a/templates/invalidLogin.html
+++ b/templates/invalidLogin.html
@@ -23,13 +23,13 @@
 
         <input type="submit" value="Login" id="submit-btn">
 
-        <div id="message">Invalid Username/password</div>
+        <div id="message">Invalid Username/Password</div>
       </fieldset>
     </form>
 
     <div class="signup">
-      <label for="signup">Don't have an Account?</label>
-      <a href="/sign-up">Sign-up</a>
+      <label for="signup">Don't have an account?</label>
+      <a href="/sign-up">Sign-Up</a>
     </div>
 
   </main>
