--- a/templates/login.html
+++ b/templates/login.html
@@ -27,8 +27,8 @@
     </form>
 
     <div class="signup">
-      <label for="signup">Don't have an Account?</label>
-      <a href="/sign-up">Sign-up</a>
+      <label for="signup">Don't have an account?</label>
+      <a href="/sign-up">Sign-Up</a>
     </div>
 
     <div id="message"></div>
