Made form to submit on enter.

--- a/templates/home.html
+++ b/templates/home.html
@@ -41,16 +41,17 @@
 
         <div class="items">
         </div>
+
+        <input type="submit" value="Create List" id="create-list">
       </form>
 
       <div>
-        <input type="button" value="Create List" id="create-list">
       </div>
     </section>
 
-    <section class="view-list">
+    <section class="view-list scroll">
       <h3 class="thick">All TODOs</h3>
-      <div class="all-lists scroll">
+      <div class="all-lists">
 
       </div>
     </section>
