--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -2,10 +2,16 @@ body {
   width: 1200px;
   margin: 0 auto;
   font-family: sans-serif;
+  font-size: 20px;
 }
 
 a {
   text-decoration: none;
+  color: gray;
+}
+
+a:hover {
+  color: black;
 }
 
 .page-header {
@@ -24,7 +30,7 @@ a {
 
 .view-list {
   border: 1px solid black;
-  height: 60%;
+  height: 50%;
   padding: 0 20px;
 }
 
@@ -51,7 +57,6 @@ ul {
   margin: 1em 2.5em;
   display: flex;
   flex-direction: column;
-  width: 200px;
 }
 
 .items * {
@@ -91,4 +96,5 @@ ul {
 #create-list {
   margin: 0 2em;
   font-size: 1.2em;
+  font-weight: 100;
 }
