--- a/public/styles/list.css
+++ b/public/styles/list.css
@@ -2,10 +2,16 @@ body {
   margin: 20px auto;
   width: 1080px;
   font-family: sans-serif;
+  font-size: 20px;
 }
 
 a {
   text-decoration: none;
+  color: gray;
+}
+
+a:hover {
+  color: black;
 }
 
 header {
@@ -18,6 +24,61 @@ header {
 .create-item {
   margin: 20px 0;
   display: flex;
-  justify-content: center;
   align-items: baseline;
+}
+
+.thick {
+  font-weight: 400;
+}
+
+.thin {
+  font-weight: 100;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.create-item {
+  display: flex;
+  align-items: center;
+  margin: 1em auto;
+}
+
+#prompt {
+  width: 700px;
+  height: 3em;
+  font-size: 0.7em;
+  text-align: center;
+}
+
+#create-button {
+  height: 3em;
+  width: 3em;
+}
+
+.items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid gray;
+  height: 700px;
+  width: 750px;
+  overflow: scroll;
+}
+
+.item {
+  border: 1px solid gray;
+  margin: 1em;
+  width: 700px;
+  height: 3em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.item * {
+  margin: 1em;
 }
