--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -7,11 +7,11 @@ body {
 
 a {
   text-decoration: none;
-  color: gray;
+  color: black;
 }
 
 a:hover {
-  color: black;
+  color: gray;
 }
 
 .page-header {
@@ -19,6 +19,7 @@ a:hover {
   border-bottom: 1px solid black;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   box-sizing: border-box;
 }
 
@@ -89,12 +90,17 @@ ul {
 }
 
 #create-item {
-  border-radius: 50%;
   margin: 0 0.5em;
 }
 
 #create-list {
-  margin: 0 2em;
-  font-size: 1.2em;
+  margin: 0 2.4em;
+  font-size: 1em;
   font-weight: 100;
+}
+
+.logout a {
+  margin: 0 0.2em;
+  padding: 0 0.2em;
+  border-left: 1px solid black;
 }
