--- a/public/styles/list.css
+++ b/public/styles/list.css
@@ -7,11 +7,11 @@ body {
 
 a {
   text-decoration: none;
-  color: gray;
+  color: black;
 }
 
 a:hover {
-  color: black;
+  color: gray;
 }
 
 header {
@@ -19,6 +19,11 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+}
+
+header h1 {
+  margin: 0.5em;
 }
 
 .create-item {
@@ -81,4 +86,10 @@ main {
 
 .item * {
   margin: 1em;
+}
+
+.logout a {
+  margin: 0 0.2em;
+  padding: 0 0.2em;
+  border-left: 1px solid black;
 }
