--- a/templates/list.html
+++ b/templates/list.html
@@ -8,14 +8,12 @@
 
 <body>
   <header>
-    <a href="/todo/home">Home</a>
-    <h1 class="thick">__TITLE__</h1>
+    <h1 class="thin"><a href="/todo/home">TODO</a></h1>
+    <h2 class="thin" id="list-title">__TITLE__</h2>
 
-    <div>
+    <div class="logout">
       <span>__USERNAME__</span>
-      <div class="logout">
-        <a href="/logout">Logout</a>
-      </div>
+      <a href="/logout">Logout</a>
     </div>
   </header>
 
