--- a/templates/list.html
+++ b/templates/list.html
@@ -24,7 +24,7 @@
 
       <div class="create-item">
         <input type="text" name="item" placeholder="Enter your TODO" id="prompt" required>
-        <input type="button" value="+" id="create-button">
+        <input type="submit" value="+" id="create-button">
       </div>
     </form>
 
