--- a/public/styles/list.css
+++ b/public/styles/list.css
@@ -75,6 +75,7 @@ main {
 }
 
 .item {
+  padding: 0 0.5em;
   border: 1px solid gray;
   margin: 1em;
   width: 700px;
@@ -84,12 +85,21 @@ main {
   align-items: center;
 }
 
-.item * {
-  margin: 1em;
-}
-
 .logout a {
   margin: 0 0.2em;
   padding: 0 0.2em;
   border-left: 1px solid black;
+}
+
+.item-name {
+  outline: none;
+  border: none;
+  text-decoration: none;
+  font-size: 1em;
+}
+
+.options {
+  width: 110px;
+  display: flex;
+  justify-content: space-between;
 }
