--- a/templates/list.html
+++ b/templates/list.html
@@ -19,7 +19,7 @@
 
   <main>
 
-    <form action="todo/add-item" method="post">
+    <form action="todo/add-item" method="post" id="create-item-form">
       <input type="text" name="listId" value="__LISTID__" hidden>
 
       <div class="create-item">
