--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -3,6 +3,7 @@
 <head>
   <title>Sign Up</title>
   <link rel="stylesheet" href="styles/signUp.css">
+  <link rel="stylesheet" href="styles/common.css">
 </head>
 
 <body>
