--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -2,7 +2,7 @@ body {
   width: 1200px;
   margin: 0 auto;
   font-family: sans-serif;
-  font-size: 20px;
+  font-size: var(--font-s);
 }
 
 a {
@@ -11,7 +11,11 @@ a {
 }
 
 a:hover {
-  color: gray;
+  color: var(--primary-color);
+}
+
+.margin-trim {
+  margin: 0.5em;
 }
 
 .page-header {
@@ -20,28 +24,44 @@ a:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-sizing: border-box;
 }
 
-.box {
-  border: 1px solid black;
-  margin: 20px 0;
-  padding: 20px;
+.createlist-search {
+  width: 100%;
+  height: 2.5em;
+  margin: 0.7em 0 0.4em;
+  display: flex;
+  justify-content: space-between;
+}
+
+#create-list-form {
+  display: flex;
+}
+
+.bar {
+  width: 550px;
+  height: 2em;
+  font-size: var(--font-s);
+}
+
+#create-btn {
+  width: 45px;
+  height: 3em;
+}
+
+.text-align {
+  padding: 0 0.5em;
 }
 
 .view-list {
   border: 1px solid black;
-  height: 50%;
-  padding: 0 20px;
+  height: 70%;
+  padding: 10px 30px;
 }
 
 ul {
   list-style-type: none;
   padding: 0;
-}
-
-.scroll {
-  overflow: scroll;
 }
 
 .list li {
@@ -52,6 +72,13 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+li:hover {
+  border-radius: 1px;
+  background: #ffffff;
+  box-shadow: 13px 13px 26px #f2f2f2,
+    -13px -13px 26px #ffffff;
 }
 
 .items {
@@ -70,43 +97,8 @@ ul {
   justify-content: space-between;
 }
 
-.thin {
-  font-weight: 200;
-}
-
-.thick {
-  font-weight: 400;
-}
-
-#todo-title {
-  width: 250px;
-  height: 2em;
-}
-
-.add-item {
-  margin: 1em 3em;
-  display: flex;
-  align-items: center;
-}
-
-#create-item {
-  margin: 0 0.5em;
-}
-
-#create-list {
-  margin: 0 2.4em;
-  font-size: 1em;
-  font-weight: 100;
-}
-
-.logout a {
-  margin: 0 0.2em;
-  padding: 0 0.2em;
-  border-left: 1px solid black;
-}
-
 .item-name {
-  font-size: 1em;
+  font-size: var(--font-s);
   outline: none;
   border: none;
   text-decoration: none;
@@ -116,4 +108,9 @@ ul {
   width: 100px;
   display: flex;
   justify-content: space-between;
+}
+
+.all-lists {
+  padding: 0.1em;
+  height: 80%;
 }
