--- a/public/styles/signUp.css
+++ b/public/styles/signUp.css
@@ -1,5 +1,6 @@
 body {
   font-family: sans-serif;
+  /* font-size: 18px; */
 }
 
 .page {
@@ -29,6 +30,7 @@ legend {
   width: 50%;
   display: flex;
   flex-direction: column;
+  row-gap: 0.5em;
   height: 2em;
   margin: 1em 1em;
 }
