--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 <head>
   <title>Login page</title>
   <link rel="stylesheet" href="styles/login.css">
+  <link rel="stylesheet" href="styles/common.css">
 </head>
 
 <body>
