--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -57,6 +57,7 @@ a:hover {
   border: 1px solid black;
   height: 70%;
   padding: 10px 30px;
+  margin: 1.8em 0;
 }
 
 ul {
@@ -64,9 +65,9 @@ ul {
   padding: 0;
 }
 
-.list li {
-  padding: 0em 1em 0;
-  height: 3em;
+.lists .list {
+  padding: 0.8em 1em 0.8em;
+  height: fit-content;
   border: 1px solid gray;
   margin: 0.5em 0;
   display: flex;
@@ -74,7 +75,7 @@ ul {
   align-items: center;
 }
 
-li:hover {
+.list:hover {
   border-radius: 1px;
   background: #ffffff;
   box-shadow: 13px 13px 26px #f2f2f2,
@@ -111,6 +112,45 @@ li:hover {
 }
 
 .all-lists {
-  padding: 0.1em;
-  height: 80%;
+  height: 90%;
+}
+
+.full-list {
+  display: flex;
+  flex-direction: column;
+}
+
+/* list-view */
+.list-section {
+  width: 100%;
+  padding: 0.5em 0;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--primary-color);
+}
+
+.items-section {
+  margin: 0.5em;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.item {
+  margin: 0.2em 0;
+}
+
+/* Search */
+#search-options {
+  visibility: hidden;
+  background-color: var(--bg-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 3px;
+  width: 100%;
+  margin: 0.2em 0;
+  padding: 0.2em 0 0;
+  height: 1.5em;
+  display: flex;
+  column-gap: 0.5em;
 }
