--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -46,7 +46,8 @@ a:hover {
 
 #create-btn {
   width: 45px;
-  height: 3em;
+  height: 2em;
+  font-size: 1em;
 }
 
 .text-align {
@@ -76,10 +77,14 @@ ul {
 }
 
 .list:hover {
-  border-radius: 1px;
+  border-radius: 0px;
   background: #ffffff;
-  box-shadow: 13px 13px 26px #f2f2f2,
-    -13px -13px 26px #ffffff;
+  box-shadow: 16px 16px 34px #f2f2f2,
+    -16px -16px 34px #ffffff;
+}
+
+.list a {
+  width: 90%;
 }
 
 .items {
@@ -144,7 +149,7 @@ ul {
 /* Search */
 #search-options {
   visibility: hidden;
-  background-color: var(--bg-color);
+  background-color: var(--selected-content);
   border: 1px solid var(--primary-color);
   border-radius: 3px;
   width: 100%;
