--- a/templates/list.html
+++ b/templates/list.html
@@ -3,6 +3,7 @@
 <head>
   <title>List</title>
   <link rel="stylesheet" href="/styles/list.css">
+  <link rel="stylesheet" href="/styles/common.css">
   <script src="/js/list.js"></script>
 </head>
 
@@ -24,7 +25,7 @@
 
       <div class="create-item">
         <input type="text" name="item" placeholder="Enter your TODO" id="prompt" required>
-        <input type="submit" value="+" id="create-button">
+        <input type="submit" value="+" id="create-btn">
       </div>
     </form>
 
