Added search completion in search.

--- a/templates/home.html
+++ b/templates/home.html
@@ -41,6 +41,16 @@
             <input type="radio" name="category" id="items" value="items">
             <label for="items">Items</label>
           </div>
+
+          <div>
+            <input type="radio" name="category" id="done" value="done">
+            <label for="done">Done</label>
+          </div>
+
+          <div>
+            <input type="radio" name="category" id="pending" value="pending">
+            <label for="pending">Pending</label>
+          </div>
         </div>
       </form>
     </div>
